Overflow fixed on friendbox

--- a/src/pages/chatspace/chatspace.css
+++ b/src/pages/chatspace/chatspace.css
@@ -39,6 +39,7 @@
 #scrollbar-friends-chatspace {
     width: 25%;
     height: 100%;
+    overflow-y: auto;
 }
 
 #content-message-border-chatspace {
